<resources>
    <string name="app_name">Basic Login Signup Demo</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="login">Login</string>
    <string name="new_here_signup_now">New here ? Signup Now</string>
    <string name="signup">Signup</string>
    <string name="signup_here">Signup Here</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter Password</string>
    <string name="retype_password">Re-type Password</string>
    <string name="exisisting_user_login_now">Exsisting User ? Login Now</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_exists">User Already Exists !</string>
    <string name="invalid_email">invalid email</string>
    <string name="invalid_password">\"Password must be 9 characters long and also contains 1 capital and atleast 1 special character\"</string>
    <string name="password_not_matched">password doesnot match</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="edit_user">Edit User</string>
    <string name="edit">edit</string>

</resources>